src/examples/should_fail/multiple_starts.kiki
start Foo

start Bar

struct Foo(Bar)

struct Bar

terminal Token {
    $StrLit: String
}
